#-----------------------------------------------------
#			Quab Engine's Core Module
#-----------------------------------------------------

#	BUILD QBASE
ADD_SUBDIRECTORY(qbase)

#	BUILD AI Module

#	BUILD Control Module

#	BUILD GUI

#	BUILD Math

#	BUILD Packer

#	BUILD Render

#	BUILD Script

#	BUILD Sound